# hyperliquid-rust-sdk

./: Cargo.toml  README.md
src/: consts.rs  errors.rs  helpers.rs  lib.rs  market_maker.rs  meta.rs  proxy_digest.rs  req.rs
src/exchange/: actions.rs  api.rs  builder.rs  cancel.rs  client.rs  exchange_client.rs  mod.rs  modify.rs  order.rs
src/info/: builder.rs  client.rs  info_client.rs  mod.rs  request.rs  response_structs.rs  sub_structs.rs
src/signature/: create_signature.rs
src/ws/: message_types.rs  mod.rs  sub_structs.rs  ws_manager.rs
