[package]
name = "hyperliquid_sdk"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

[dependencies]
alloy = { version = "1", features = ["dyn-abi", "sol-types", "signer-local"] }
hex = "0.4"
lazy_static = "1"
rand = "0.9"
reqwest = "0.12"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

thiserror = "2"
uuid = { version = "1", features = ["v4"] }

fastwebsockets = { version = "0.10", features = ["upgrade"] }
url = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
native-tls = "0.2"
tokio-native-tls = "0.3"

futures = "0.3"
futures-util = "0.3"
hyper = "1.6"
http = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
  "fmt",
] }
scc = "2.3.4"
